--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
