Adapter in RecyclerView of Notify Intent

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true
+        buildFeatures {
+            viewBinding true
+        }
     }
     buildTypes {
         release {
@@ -29,23 +32,27 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    androidExtensions {
+        experimental = true
+    }
 }
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     implementation 'com.google.android.material:material:1.4.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     // or implementation 'com.google.firebase:firebase-core:16.0.0'
-
 
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
@@ -63,6 +70,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
+    implementation 'com.xwray:groupie:2.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
